scala-utils-validator module extracted from deprecated scala-utils + pom cleanup