@@ -12,17 +12,73 @@
     </organization>
     <modules>
         <module>scala-utils_2.11</module>
+        <module>scala-utils-validator_2.11</module>
         <module>scala-cas_2.11</module>
     </modules>
-    <repositories>
-        <repository>
-            <id>Maven central</id>
-            <name>maven central repository</name>
-            <url>http://repo.maven.apache.org/maven2/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
+    <build>
+        <pluginManagement>
+            <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <configuration>
+                    <includes>
+                        <exclude>**/*Spec.java</exclude>
+                        <exclude>**/*Test.java</exclude>
+                    </includes>
+                    <argLine>-Xms512M -Xmx1G -XX:MaxPermSize=512M</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+        </pluginManagement>
+    </build>
     <distributionManagement>
         <repository>
             <id>oph-sade-artifactory</id>
@@ -35,4 +91,47 @@
             <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>Maven central</id>
+            <name>maven central repository</name>
+            <url>http://repo.maven.apache.org/maven2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>oph-sade-artifactory</id>
+            <name>oph-sade-artifactory-snapshots</name>
+            <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-snapshot-local</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>false</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>oph-sade-artifactory2</id>
+            <name>oph-sade-artifactory-releases</name>
+            <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-release-local</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+
+        </repository>
+    </repositories>
+
 </project>
